# hpc-simulation

./: .gitignore  CMakeLists.txt  README.md  hpc-deploy.xml  hpc-platform.xml
src/: main.cpp  master.cpp  master.hpp  scheduler.cpp  worker.cpp
src/header/: job.hpp  master.hpp  scheduler.hpp  worker.hpp
